fixtures/vyper/simple/overflow/negative/i128.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-170141183460469231731687303715884105728"
#!           ],
#!           "caller": "0x2870a1Ad46624fc122724d563C135848Ad55D7b4"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int128) -> int128:
    return witness - 1
